<resources>

    <string name="facebook_app_id">1036530526488329</string>

    <string name="app_name">NewsApp</string>

    <string name="preference_file_key">com.prisyazhny.newsapp.cache</string>
    <string name="sort_title">Sort by:</string>
    <string name="sort_by_published_date">Published date</string>
    <string name="sort_by_popularity">Popularity</string>

    <string name="filter_title">Filter</string>
    <string name="sources_title">Sources:</string>
    <string name="date_from_title">From:</string>
    <string name="date_to_title">To:</string>
    <string name="no_sources">Empty source list</string>
    <string name="no_news">There is no news</string>
    <string name="menu_favourites">Favourites</string>
    <string name="connection_error">Check internet connection or change search filter</string>
    <string name="date">YYYY-MM-DD</string>
    <string name="invitation_title">Invite</string>
    <string name="invitation_message">Please install NewsApp</string>
    <string name="invitation_deep_link">https://g8k9k.app.goo.gl</string>
    <string name="successful_invitation">The invitation was sent</string>
    <string name="failed_invitation">Can`t send invitation</string>
</resources>
