<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="@dimen/margin_8">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/llDateFilter"
                android:layout_toStartOf="@+id/llDateFilter"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sources_title" />

                <ListView
                    android:id="@+id/lvSources"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:choiceMode="multipleChoice">

                </ListView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDateFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_from_title" />

                <TextView
                    android:id="@+id/tvDateFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_date_range_black_24dp"
                    android:drawableRight="@drawable/ic_date_range_black_24dp"
                    android:minWidth="50dp"
                    tools:text="2018.02.04" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_to_title" />

                <TextView
                    android:id="@+id/tvDateTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_date_range_black_24dp"
                    android:drawableRight="@drawable/ic_date_range_black_24dp"
                    android:minWidth="50dp"
                    tools:text="2018.02.04" />

            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
